[package]
name = "rusty_particle_physics_2d"
version = "0.1.0"
edition = "2021"
description = "A powerful 2d physics engine based on particles, forces, and constraints."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
